Closed Bug 100270 Opened 23 years ago Closed 23 years ago

evaluating "window.close();" in the javascript console crashes mozilla

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.5

People

(Reporter: jst, Assigned: jst)

References

()

Details

(Whiteboard: [HAVE FIX])

Attachments

(1 file)

The subject says it all, patch coming up.
Attached patch Proposed fix.Splinter Review
The problem is that the CSS frame constructor is deleted while it's on the
stack, and the pres shell tries to reference its view manager after it has been
destroyed, the bandage fix is trivial. dbaron, waterson, hyatt, r/sr=?
Status: NEW → ASSIGNED
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9.5
What method are you modifying in nsCSSFrameConstructor.cpp? AttributeChanged()?
Yes, AttributeChanged(). From within attribute changed we end up tearing down
iframes n' who knows what that causes a bunch of pres shells to be destroyed and
also at least this one CSSFrameConstructor. The deathgrip keeps it alive and I
did verify that the refcount of the CSSFrameConstructor is 1 when we unroll from
the place where we used to crash and when the kungFuDeathGrip goes out of scope
the frame constructor is deleted.
Comment on attachment 49742 [details] [diff] [review]
Proposed fix.

r=waterson
Attachment #49742 - Flags: review+
sr=hyatt
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: