Fixing bug 100270. Crash when evaluating 'window.close();' in the JavaScript console. r=waterson@netscape.com, sr=hyatt@netscape.com